--- a/hintmcnlo/Examples/Makefile
+++ b/hintmcnlo/Examples/Makefile
@@ -89,7 +89,7 @@ DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 pkgdatadir = ${datadir}/${PACKAGE_TARNAME}
 pkgincludedir = ${includedir}/${PACKAGE_TARNAME}
 pkglibdir = ${libdir}/${PACKAGE_TARNAME}
-ACLOCAL = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/missing --run aclocal-1.11
 AHADICBUILDDIR = ${top_builddir}/AHADIC++
 AHADICDIR = ${top_srcdir}/AHADIC++
 AHADICLIBS = -L${AHADICBUILDDIR}/Main -L${AHADICBUILDDIR}/Tools -L${AHADICBUILDDIR}/Formation -L${AHADICBUILDDIR}/Decays               -lAhadicMain -lAhadicTools -lAhadicFormation -lAhadicDecays
@@ -99,7 +99,7 @@ AMEGICLIBS = -L${AMEGICBUILDDIR}/Main -L${AMEGICBUILDDIR}/DipoleSubtraction 	   
 AMISICBUILDDIR = ${top_builddir}/AMISIC++
 AMISICDIR = ${top_srcdir}/AMISIC++
 AMISICLIBS = -L${AMISICBUILDDIR}/Main -L${AMISICBUILDDIR}/Tools -L${AMISICBUILDDIR}/Model               -lAmisic -lAmisicModel -lAmisicTools
-AMTAR = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/missing --run tar
+AMTAR = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/missing --run tar
 AM_CPPFLAGS = -I$(top_srcdir)
 AM_CXXFLAGS = -g -O2
 AM_DEFAULT_VERBOSITY = 1
@@ -109,25 +109,25 @@ AR = ar
 ATOOLSBUILDDIR = ${top_builddir}/ATOOLS
 ATOOLSDIR = ${top_srcdir}/ATOOLS
 ATOOLSLIBS = -L${ATOOLSBUILDDIR}/Phys -L${ATOOLSBUILDDIR}/Math               -L${ATOOLSBUILDDIR}/Org               -lToolsPhys -lToolsMath -lToolsOrg
-AUTOCONF = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/missing --run autoconf
-AUTOHEADER = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/missing --run autoheader
-AUTOMAKE = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/missing --run automake-1.11
 AWK = gawk
 AX_SWIG_PYTHON_CPPFLAGS = 
 AX_SWIG_PYTHON_OPT = 
 BEAMBUILDDIR = ${top_builddir}/BEAM
 BEAMDIR = ${top_srcdir}/BEAM
 BEAMLIBS = -L${BEAMBUILDDIR}/Main -lBeam
-BINDIR = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/bin
+BINDIR = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/bin
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
 COMIXBUILDDIR = ${top_builddir}/COMIX
 COMIXDIR = ${top_srcdir}/COMIX
 COMIXLIBS = -L${COMIXBUILDDIR}/Amplitude -L${COMIXBUILDDIR}/Phasespace -L${COMIXBUILDDIR}/Main -L${COMIXBUILDDIR}/Cluster -lComixAmplitude -lComixPhasespace -lComix -lComixCluster
-CONDITIONAL_BLACKHATDIR = 
-CONDITIONAL_BLACKHATINCS = 
-CONDITIONAL_BLACKHATLIBS = 
+CONDITIONAL_BLACKHATDIR = /home/lm/disk/files/sw/mc/blackhat-0.9.9/install
+CONDITIONAL_BLACKHATINCS = -I/home/lm/disk/files/sw/mc/blackhat-0.9.9/install/include
+CONDITIONAL_BLACKHATLIBS = -L/home/lm/disk/files/sw/mc/blackhat-0.9.9/install/lib/blackhat -lInterface -lassembly -lOLA -lCutPart -lRatPart -lratext -lBH -lAmpl_eval -lRateval -lCuteval -lCut_wCI -lBG -lBHcore -lIntegrals -lSpinors -L/home/lm/disk/files/sw/mc/qd-2.3.22/install/lib -lqd
 CONDITIONAL_CERNLIBLIBS = 
 CONDITIONAL_DELPHESINCS = 
 CONDITIONAL_DELPHESLIBS = 
@@ -136,9 +136,9 @@ CONDITIONAL_FASTJETINCS =
 CONDITIONAL_FASTJETLIBS = 
 CONDITIONAL_GZIPINCS = 
 CONDITIONAL_GZIPLIBS = 
-CONDITIONAL_HEPMC2DIR = /cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/hepmc/2.06.07-cms4
-CONDITIONAL_HEPMC2INCS = -I/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/hepmc/2.06.07-cms4/include
-CONDITIONAL_HEPMC2LIBS = -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/hepmc/2.06.07-cms4/lib -R/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/hepmc/2.06.07-cms4/lib -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/hepmc/2.06.07-cms4/lib64 -R/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/hepmc/2.06.07-cms4/lib64 -lHepMC
+CONDITIONAL_HEPMC2DIR = /home/lm/disk/files/sw/mc/hepmc/install
+CONDITIONAL_HEPMC2INCS = -I/home/lm/disk/files/sw/mc/hepmc/install/include
+CONDITIONAL_HEPMC2LIBS = -L/home/lm/disk/files/sw/mc/hepmc/install/lib -R/home/lm/disk/files/sw/mc/hepmc/install/lib -L/home/lm/disk/files/sw/mc/hepmc/install/lib64 -R/home/lm/disk/files/sw/mc/hepmc/install/lib64 -lHepMC
 CONDITIONAL_HZTOOLDIR = 
 CONDITIONAL_HZTOOLINCS = 
 CONDITIONAL_HZTOOLLIBS = 
@@ -164,7 +164,7 @@ CXXCPP = g++ -Wl,--no-as-needed -E
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = 
 CYGPATH_W = echo
-DATADIR = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/share/SHERPA-MC
+DATADIR = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/share/SHERPA-MC
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 DIMBUILDDIR = ${top_builddir}/DIM
@@ -186,22 +186,22 @@ EXTRAXSLIBS = -L${EXTRAXSBUILDDIR}/Main -lExtraXS                -L${EXTRAXSBUIL
 F77 = gfortran
 FC = gfortran
 FCFLAGS = -g -O2
-FCLIBS =  -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/bin/../lib/gcc/x86_64-redhat-linux-gnu/4.8.1 -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/bin/../lib/gcc -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/bin/../lib/gcc/x86_64-redhat-linux-gnu/4.8.1/../../../../lib64 -L/lib/../lib64 -L/usr/lib/../lib64 -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/bin/../lib/gcc/x86_64-redhat-linux-gnu/4.8.1/../../../../x86_64-redhat-linux-gnu/lib -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/bin/../lib/gcc/x86_64-redhat-linux-gnu/4.8.1/../../.. -lgfortran -lm -lquadmath
+FCLIBS =  -L/usr/lib/gcc/x86_64-linux-gnu/7 -L/usr/lib/gcc/x86_64-linux-gnu/7/../../../x86_64-linux-gnu -L/usr/lib/gcc/x86_64-linux-gnu/7/../../../../lib -L/lib/x86_64-linux-gnu -L/lib/../lib -L/usr/lib/x86_64-linux-gnu -L/usr/lib/../lib -L/usr/lib/gcc/x86_64-linux-gnu/7/../../.. -lgfortran -lm -lquadmath
 FGREP = /bin/grep -F
 GREP = /bin/grep
 HADRONSBUILDDIR = ${top_builddir}/HADRONS++
 HADRONSDIR = ${top_srcdir}/HADRONS++
 HADRONSLIBS = -L${HADRONSBUILDDIR}/Main -L${HADRONSBUILDDIR}/ME_Library                -L${HADRONSBUILDDIR}/Current_Library -L${HADRONSBUILDDIR}/PS_Library                -lHadronsMain -lHadronsMEs -lHadronsCurrents -lHadronsPSs
 HEPEVT_CB_SIZE = 10000
-INCLUDEDIR = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/include/SHERPA-MC
+INCLUDEDIR = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/include/SHERPA-MC
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LD = /cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/x86_64-redhat-linux-gnu/bin/ld -m elf_x86_64
+LD = /usr/bin/ld -m elf_x86_64
 LDFLAGS = 
-LIBDIR = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/lib/SHERPA-MC
+LIBDIR = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/lib/SHERPA-MC
 LIBOBJS = 
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
@@ -209,7 +209,7 @@ LIPO =
 LN_S = ln -s
 LOADMPIFORPY = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/missing --run makeinfo
 MCATNLOBUILDDIR = ${top_builddir}/MCATNLO
 MCATNLODIR = ${top_srcdir}/MCATNLO
 MCATNLOLIBS = -L${MCATNLOBUILDDIR}/Main -L${MCATNLOBUILDDIR}/Calculators -L${MCATNLOBUILDDIR}/Showers -L${MCATNLOBUILDDIR}/Tools 		-lMCatNLOTools -lMCatNLOCalculators -lMCatNLOShowers -lMCatNLOMain
@@ -222,7 +222,7 @@ MODELBUILDDIR = ${top_builddir}/MODEL
 MODELDIR = ${top_srcdir}/MODEL
 MODELLIBS = -L${MODELBUILDDIR}/Main              -lModelMain 	     -L${MODELBUILDDIR}/UFO 	     -lModelUFO
 MPICXX = 
-NM = /cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/gcc/4.8.1/bin/nm -B
+NM = /usr/bin/nm -B
 NMEDIT = 
 OBJDUMP = objdump
 OBJEXT = o
@@ -259,26 +259,26 @@ RANLIB = ranlib
 SED = /bin/sed
 SEDCOMMAND = sed -i -r
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 SHERPABUILDDIR = ${top_builddir}/SHERPA
 SHERPADIR = ${top_srcdir}/SHERPA
 SHERPALIBS = -L${SHERPABUILDDIR}/Single_Events -L${SHERPABUILDDIR}/PerturbativePhysics               -L${SHERPABUILDDIR}/LundTools -L${SHERPABUILDDIR}/Tools -L${SHERPABUILDDIR}/Main               -L${SHERPABUILDDIR}/Initialization -L${SHERPABUILDDIR}/SoftPhysics -L${SHERPABUILDDIR}/HerwigTools               -lSherpaMain -lSherpaInitialization -lSherpaSingleEvents               -lSherpaPerturbativePhysics -lSherpaSoftPhysics -lLundTools -lSherpaTools
-SHERPAPREFIX = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo
+SHERPAPREFIX = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo
 SHRIMPSBUILDDIR = ${top_builddir}/SHRiMPS
 SHRIMPSDIR = ${top_srcdir}/SHRiMPS
 SHRIMPSLIBS = -L${SHRIMPSBUILDDIR}/Main -L${SHRIMPSBUILDDIR}/Event_Generation         -L${SHRIMPSBUILDDIR}/Beam_Remnants -L${SHRIMPSBUILDDIR}/Cross_Sections        -L${SHRIMPSBUILDDIR}/Eikonals -L${SHRIMPSBUILDDIR}/Tools         -lShrimpsMain -lShrimpsEvents -lShrimpsBeamRemnants        -lShrimpsXsecs -lShrimpsEikonals -lShrimpsTools
-SQLITE3_CFLAGS = -I/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/sqlite/3.7.17/include
-SQLITE3_LDFLAGS = -L/cvmfs/cms.cern.ch/slc6_amd64_gcc481/external/sqlite/3.7.17/lib -lsqlite3
-SQLITE3_VERSION = 3.7.17
+SQLITE3_CFLAGS = -I/home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/include
+SQLITE3_LDFLAGS = -L/home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/lib -lsqlite3
+SQLITE3_VERSION = 3.8.2
 STRIP = strip
 SWIG = 
 SWIG_LIB = 
 VERSION = 2.2.0
 VERSIONING = 
-abs_builddir = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/Examples
-abs_srcdir = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/Examples
-abs_top_builddir = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo
-abs_top_srcdir = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo
+abs_builddir = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/Examples
+abs_srcdir = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/Examples
+abs_top_builddir = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo
+abs_top_srcdir = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 ac_ct_DUMPBIN = 
@@ -299,7 +299,7 @@ datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
-exec_prefix = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo
+exec_prefix = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo
 host = x86_64-unknown-linux-gnu
 host_alias = 
 host_cpu = x86_64
@@ -308,7 +308,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo/install-sh
+install_sh = ${SHELL} /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -321,7 +321,7 @@ oldincludedir = /usr/include
 pdfdir = ${docdir}
 pkgpyexecdir = 
 pkgpythondir = 
-prefix = /afs/cern.ch/work/s/soffi/CMSSW720-HggInt/src/hintmcnlo
+prefix = /home/lm/disk/files/sw/mc/sherpa_hgg_interf/SherpaHggInterference/hintmcnlo
 program_transform_name = s,x,x,
 psdir = ${docdir}
 pyexecdir = 
@@ -336,8 +336,8 @@ top_builddir = ..
 top_srcdir = ..
 examplesdir = $(pkgdatadir)/Examples
 nobase_dist_examples_DATA = \
-		H_in_GluonFusion/LHC_HInterference/Run.dat \
-		H_in_GluonFusion/LHC_HInt_MCatNLO/Run.dat
+		H_in_GluonFusion/LHC_HInt_INT/Run.dat \
+		H_in_GluonFusion/LHC_HInt_MCatNLO_INT/Run.dat
 
 all: all-am
 
